Finishing off 0226 re tt06-grab-bag

--- a/0226-2025-02-20.md
+++ b/0226-2025-02-20.md
@@ -20,8 +20,6 @@ The design implements a simple VGA driver demonstration that generates analog ou
 
 Due to Tiny Tapeout limitations, my project relies on external op-amps to buffer the analog outputs, and also to scale their 0-1.8V range down to 0-0.7V.
 
-![tt06-grab-bag prototype PCB setup](./i/0226-prototype-pcbs.jpg)
-
 From simulation, the design was expected to be able to transition (i.e. 'slew') between maximum and minimum brightness within about 240ns (where, using a 25MHz VGA 'dot clock', 40ns is 1 pixel horizontally, so 240ns is 6 pixels horizontally). Due to a much-improved [external amp solution](#vga-amp-board) this slew rate was reduced to no worse than about 100ns (at the cost of some extra noise, but which is hard to see anyway).
 
 
@@ -104,16 +102,20 @@ My on-chip circuit produces analog outputs that are 0-1.8V and about 10k impedan
 
 ![VGA amp protoboard](./i/0226-first-try.jpg)
 
-With lots of [great tips from Sylvain Munaut](https://discord.com/channels/1009193568256135208/1328617914588332042) I was able to make a much better board (as seen at the start of this article) by doing the following:
+With lots of [great tips from Sylvain Munaut](https://discord.com/channels/1009193568256135208/1328617914588332042) I was able to make a much better board:
 *   Getting rid of U.FL/coaxial cables; they add a lot of extra capacitive load. I replaced them with simple short wires.
 *   Using another OPA3355-based prototyping PCB I'd had fabbed for this project, which arrived shortly after my initial experiments.
-*   Using a pull-down resistor on the op-amp input side to effectively get lower impedance and hence a faster slew rate from the ASIC (despite a lower output voltage range and hence more noise).
+*   Using a 2.2k pull-down resistor on the op-amp input side to effectively get lower impedance and hence a faster slew rate from the ASIC (despite a lower output voltage range and hence more noise).
 *   Forgetting about biasing (which I was doing to try and get around rail-to-rail limitations with the OPA3355) -- turns out it's pretty good and I don't care much about the near-0V where it bottoms out.
 *   In turn, this meant I could use a simple impedance-matched feedback network to set the gain on the now-lower output range, to get it up to 0-0.7V and 75&ohm; impedance.
 
+![Schematic of one channel opamp configuration](i/0226-opamp-schem.png)
+
 Note also that my scope probe introduced a lot of extra load on the input-side signals when I was trying to measure them.
 
-TODO: New schematic screenshot.
+Here's the revised board wired directly to the TT06 chip carrier (aka "breakout") board:
+
+![tt06-grab-bag prototype PCB setup](./i/0226-prototype-pcbs.jpg)
 
 In any case, after reworking the boards I had on hand, I was able to get the slews right down. This scope screenshot shows the unmodified CH2 (blue) with ~800ns slew, compared with the improved CH1 (yellow) at about ~68ns (though I was later getting closer to about 100ns):
 
@@ -123,6 +125,12 @@ Comparing the screen captures from the original amp board and the new amp board 
 
 ![Smeared original capture vs. improved new amp capture](./i/0226-smears.jpg)
 
+NOTE: Screen captures were produced in a way that would have degraded the image quality further:
+*   VGA output from the amp board goes into a cheap VGA-to-HDMI converter
+*   This is fed into an HDMI capture device (Elgato Cam Link)
+*   This then captures via OBS to an MP4 file
+
+Where I was able to do so, I tried to control all stages for minimal quality reductions, but some can't be controlled at all.
 
 
 ## Interposer board
@@ -141,20 +149,28 @@ I tested it with a 2nd (unmodified) TT06 board and it works like a charm.
 
 ![Interposer board in operation](i/0226-ip2.jpg)
 
-The actual performance is about the same, i.e. on the order of 100ns slew rate. Notice also that the lowest video level is about 80-100mV:
+The actual performance is about the same, i.e. on the order of 100ns slew rate. Below are two channels switching from max-to-min and min-to-max at the same time:
 
 ![Interpower slew rate on oscilloscope](i/0226-ip-scope.jpg)
 
-I'm guessing this is the "rail-to-rail" limit of the single-supply op-amps. This means the darkest tones are crushed, but it still looks good on screen.
+Notice also that the lowest video level is about 80-100mV; I'm guessing this is the "rail-to-rail" limit of the single-supply op-amps. This means the darkest tones are crushed, but it still looks good on screen. I wouldn't be surprised if the monitor I'm using has automatic gain control too.
 
 
 ## Non-linearities
 
 The output from the DACs has some non-linearity, in that there are some discontinuities/"bumps" where there should otherwise be a perfect slope. These were seen in simulation and demonstrated in silicon.
 
-*TODO: Images of banding and oscilloscope with Red/Blue channel differences. Put simulation graph snippet beside oscilloscope capture. Speculate that differences can also be due to layout, resistor sizing in Magic, or matching... in some cases maybe even coupling.*
+![DAC non-linearities in simulation and physical ASIC](i/0226-non-linear.jpg)
 
-I made sure to save a copy of the original [digital controller block's OpenLane hardening results](https://github.com/algofoogle/tt06-grab-bag/blob/main/openlane/controller/runs-controller-harden-2024-04-20.xz) in the repo. I searched the post-synthesis/layout Verilog netlist for the sky130 standard cells that drive each of the 24 digital colour outputs (that become the DACs' inputs), and found inconsistencies which probably explain some of the non-linearities in the analog output. Here's the raw data:
+Exposed above are a simluation prediction of discontinuities ("non-monotonicity") where both the red and the blue channel outputs are not completely straight lines, but they also differ from each other after the 50% level. In the actual physical ASIC this was measured also, and theses issues appear as banding in what should otherwise be completely smooth gradients with no other "features" visible:
+
+![Banding errors seen in smooth gradients](i/0226-banding.jpg)
+
+For more information on DAC errors (and any data conversion errors), see: https://www.analog.com/media/en/technical-documentation/technical-articles/adi-data-conversion.pdf
+
+Some reasons these errors could occur include parasitics introduced by my specific layout, sizing of resistors (and how accurately Magic represented them between the "R" size and the "2R" size), how accurate the actual fabricated resistors are compared to each other (i.e. how well they are "matched"), and possibly even other coupling effects.
+
+I was able to verify, however, that probably the main reason for these errors is that OpenLane selected different types of output buffers (and hence different drive strengths) for each of the 24 digital output bits going to the DACs. This was confirmed when I checked the original post-synthesis/layout Verilog netlist for the sky130 standard cells that drive each of the 24 digital colour outputs (that become the DACs' inputs). I had saved a copy of the original [digital controller block's OpenLane hardening results](https://github.com/algofoogle/tt06-grab-bag/blob/main/openlane/controller/runs-controller-harden-2024-04-20.xz) in the repo and I searched the netlist to find inconsistencies. Here's the raw data:
 
 ```
 $ egrep -H -n "X.\b[rgb]\b" ./results/final/verilog/gl/controller.v -B 5 | fgrep -v '.V'
@@ -223,7 +239,12 @@ To summarize:
 | r[6]    | buf_2      | g[6]      | buf_2        | b[6]     | buf_2       |
 | r[7]    | buf_2      | g[7]      | buf_2        | b[7]     | **clkbuf_4**|
 
-Note that besides different `clkbuf_4` cells in general, the Blue channel in particular is different from Red and Green.
+Note that besides different `clkbuf_4` cells in general, the Blue channel in particular is different from Red and Green. These can be located by viewing the GDS too:
 
-*TODO: Show different cells in GDS.*
+![GDS cells showing differences per channel bit](i/0226-gds-cells.png)
 
+## Stay tuned for TT08 VGA FUN!
+
+I submitted a newer version of this idea to Tiny Tapeout 8, called "[TT08 VGA FUN!](https://tinytapeout.com/runs/tt08/tt_um_algofoogle_tt08_vga_fun)". It has experiments with two different kinds of current-steering DACs (instead of RDACs) for hopefully better performance, and an improved digital control block. These chips are expected to go through initial testing in March 2025 and then maybe extensive testing 2 months later.
+
+For more information, see [0216](https://github.com/algofoogle/journal/blob/master/0216-2024-08-23.md) (though there are many earlier journal entries I have on this also) and [the original repo](https://github.com/algofoogle/tt08-vga-fun).
