0227 (Efabless shutdown, TT10 notes) + 0228 (TT07 initial testing)

--- a/0227-2025-02-25.md
+++ b/0227-2025-02-25.md
@@ -2,4 +2,116 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0226**-2025-02-20.md](./0226-2025-02-20.md) | *Next journal TBA* |
+| [**0226**-2025-02-20.md](./0226-2025-02-20.md) | [**0228**-2025-03-27.md](./0228-2025-03-27.md) |
+
+# Efabless shutdown
+
+Efabless suddenly and unexpectedly went out of business, officially closing its doors at the end of February 2025.
+
+A consequence of this, sky130 fabrication is on hold (maybe indefinitely).
+
+This is a shame because (aside from loving working there), I might not ever get back the TT08 project I was about to receive and test, to say nothing of TT09 and other test chips I had undergoing fabrication.
+
+Oh well, we'll see what happens. I might work on learning the IHP PDK for a while.
+
+
+# Local hardening notes for TT10
+
+These are notes I took at the time for doing local TT10 hardening, prior to Efabless shutdown.
+
+Thus, they are for TT10, when that was still going to be a sky130 shuttle...
+
+## Digital control block hardening attempts
+
+Setup:
+
+```bash
+cd ~/projects/tt10-vga-TEST
+git clone -b tt10 https://github.com/TinyTapeout/tt-support-tools tt
+mkdir ~/ttsetup@tt10
+python3.11 -m venv ~/ttsetup@tt10/venv --prompt tt10
+source ~/ttsetup@tt10/venv/bin/activate
+pip install -r tt/requirements.txt
+```
+
+Then copy in `~/projects/tt09-ring-osc3/env-tt09.sh` and rename to `env-tt10.sh`:
+
+```bash
+#!/bin/bash
+
+if [ ! -d ./tt ]; then
+    echo "ABORTING as ./tt/ does not exist yet."
+    echo "See the tt-support-tools step of: https://tinytapeout.com/guides/local-hardening/"
+    echo "Typically, you'd run: git clone -b tt10 https://github.com/TinyTapeout/tt-support-tools tt"
+    return 1
+fi
+
+if [[ "${BASH_SOURCE[0]}" == "${0}" ]]; then
+    echo "WARNING: It looks like you ran $0 directly."
+    echo "NORMALLY you should instead run: source $0"
+    echo "MAYBE you want to give that another try?"
+fi
+
+export TTPYTHON=python3.11
+export TTPROMPT=tt10
+export TTTOOLS=/home/anton/ttsetup@tt10
+mkdir -p "$TTTOOLS/pdk"
+export PDK_ROOT=$TTTOOLS/pdk
+export PDK=sky130A
+export OPENLANE2_TAG=2.2.9
+
+## From https://github.com/TinyTapeout/tt-gds-action/blob/ac4c7934481e7c5fb9afa202a72a14025e78e13f/action.yml#L53-L57
+#export FLOW=openlane2
+#export FLOW_ARG=--openlane2
+
+# Mangling of https://github.com/TinyTapeout/tt-gds-action/blob/ac4c7934481e7c5fb9afa202a72a14025e78e13f/action.yml#L122
+export LINTER_LOG_BASE="runs/wokwi/*-verilator-lint/verilator-lint.log"
+
+export VENV_DIR="$TTTOOLS/venv"
+export VENV_CMD="$VENV_DIR/bin/activate"
+if [ ! -e "$VENV_CMD" ]; then
+    echo "NOTE: Venv $VENV_CMD doesn't exist; creating it..."
+    $TTPYTHON -m venv --prompt "$TTPROMPT" "$VENV_DIR"
+    echo "DONE."
+fi
+echo "Activating VENV..."
+source "$VENV_CMD"
+echo "NOTE: If prompt doesn't include '($TTPROMPT)' then make sure you run this script via 'source'"
+```
+
+Run `source ./env-tt10.sh`
+
+Create `harden.sh`:
+
+```bash
+#!/usr/bin/bash
+
+if [ -z "$VIRTUAL_ENV" ]; then echo "VENV is not loaded. Did you remember to run: source ./env-tt10.sh"; exit 1; fi
+
+echo "Regenerating user config..."
+./tt/tt_tool.py --create-user-config --openlane2 && (
+    echo "Running local hardening..."
+    ./tt/tt_tool.py --harden --openlane2
+)
+```
+
+Run `pip install openlane==$OPENLANE2_TAG`
+
+Run `./tt/tt_tool.py --create-user-config --openlane2`
+
+
+## Making a DEF for custom pin placement in OpenLane 2
+
+I was working on this at the time both to learn how to do it, and to create an irregular digital block area that would use abutment for superimposed analog/digital pin connections...
+
+*   Update Verilog to generate thermo-code outputs for SEGDACs, as well as vbias control pass-through.
+*   Define the boundary (`DIEAREA`).
+*   Place/copy the pins/ports to match TT IOs at the top.
+*   Place *inset* pins in the bottom-left that will drive the SEGDACs directly (without separate thermo2bit decoders). Don't forget vbias digital inputs.
+*   Save the DEF.
+*   Measure the inset box and either write BLOCKAGES for it or (better, as it's exposed and won't be lost?) put in OL2:
+    *   [`FP_OBSTRUCTIONS`](https://openlane2.readthedocs.io/en/latest/reference/step_config_vars.html#var-openroad-floorplan-fp-obstructions)
+    *   [`ROUTING_OBSTRUCTIONS`](https://openlane2.readthedocs.io/en/latest/reference/step_config_vars.html#add-obstructions)
+    *   [`PDN_OBSTRUCTIONS`](https://openlane2.readthedocs.io/en/latest/reference/step_config_vars.html#add-pdn-obstructions)
+*   Try OL2 harden with this DEF and make sure it correctly uses the inset pins.
+
