Minor corrections to 0229

--- a/0229-2025-04-01.md
+++ b/0229-2025-04-01.md
@@ -35,7 +35,7 @@ For the capture MP4 file, see here: [`files/0229/0229-rbz-initial-video-nv.mp4`]
 
 This project supports rendering of wall textures that come from an external SPI memory (as do all raybox-zero versions after TT04). I've collected and otherwise made a few textures. Most are from Wolf3D with contentious material edited out.
 
-The raw 1MB binary [tt07-wall-textures.bin](https://github.com/algofoogle/raybox-zero/blob/main/assets/tt07-wall-textures.bin) is ready to be written to an SPI Flash ROM. There is a [preview PNG of all the textures](https://github.com/algofoogle/raybox-zero/blob/main/assets/tt07-wall-textures-RGB222-PREVIEW.png). Note that it is the same 64 textures (arranged as 32 pairs: light and dark 'sides'), but repeated 4 times over with different adjustment/dithering methods. For more information on how the binary was created, see "[Generating the Texture SPI ROM binary](#generating-the-texture-spi-rom-binary)".
+The raw 1MB binary [tt07-wall-textures.bin] (in [raybox-zero's "assets" directory](https://github.com/algofoogle/raybox-zero/blob/main/assets/)) is ready to be written to an SPI Flash ROM. There is a [preview PNG of all the textures](https://github.com/algofoogle/raybox-zero/blob/main/assets/tt07-wall-textures-RGB222-PREVIEW.png). Note that it is the same 64 textures (arranged as 32 pairs: light and dark 'sides'), but repeated 4 times over with different adjustment/dithering methods. For more information on how the binary was created, see "[Generating the Texture SPI ROM binary](#generating-the-texture-spi-rom-binary)".
 
 The TT07 demo board can be used with the "Tiny Tapeout Flasher" (similar to TT Commander) to write to the Tiny QSPI PMOD...
 
@@ -46,7 +46,7 @@ The mole99 [QSPI PMOD](https://github.com/mole99/qspi-pmod) (for sale [here](htt
 
 Do the following:
 
-1.  Download [tt07-wall-textures.bin](https://github.com/algofoogle/raybox-zero/blob/main/assets/tt07-wall-textures.bin).
+1.  Download [tt07-wall-textures.bin].
 2.  Unplug and replug the TT07 demo board's USB cord.
 3.  Plug in the QSPI PMOD into the `uio` ("BIDIR") PMOD socket.
 4.  Go to the [Tiny Tapeout Flasher](https://tinytapeout.github.io/tinytapeout-flasher/) in your browser and 'CONNECT TO BOARD'.
@@ -54,6 +54,8 @@ Do the following:
 6.  Select the 'Custom' option and select the file you downloaded in step 1.
 7.  Click 'FLASH'. For me this took about 30sec.
 8.  Click 'DISCONNECT'.
+
+[tt07-wall-textures.bin]: https://github.com/algofoogle/raybox-zero/raw/refs/heads/main/assets/tt07-wall-textures.bin
 
 > [!CAUTION]
 > Now make sure you unplug the demo board, and **unplug the QSPI PMOD**. The tt07-raybox-zero SPI pinout is non-standard, so we need to wire it up manually before testing with the design. Read on below...
