0231: TT06 auto demo; IHP "Antonalog" DAC & ring osc DAC + sim; TTCAD25a & RBZ update notes

--- a/0230-2025-04-09.md
+++ b/0230-2025-04-09.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0229**-2025-04-01.md](./0229-2025-04-01.md) | *Next journal TBA* |
+| [**0229**-2025-04-01.md](./0229-2025-04-01.md) | [**0231**-2025-04-11.md](./0231-2025-04-11.md) |
 
 # More tt07-raybox-zero testing
 
@@ -30,9 +30,9 @@ The other differences in the `tt07-...` script are:
 
 ## Existing TT04/CI2311 code
 
-The [`game/CI2311/` code](https://github.com/algofoogle/raybox-zero/tree/main/game/CI2311) was written with some retargeting in mind.
+The [`game/raybox_game/` code](https://github.com/algofoogle/raybox-zero/tree/main/game/raybox_game) was written with some retargeting in mind.
 
-It was primarily intended for use with the CI2311 version of raybox-zero, and for running MicroPython code on my external RP2040 board that would interface, via Caravel's UART, with [firmware](https://github.com/algofoogle/raybox-zero/blob/main/game/CI2311/ci2311-firmware.c) on the Caravel RISC-V CPU (which would then bit-bang LA pins to do SPI transactions). For more info, see: [my recent notes](https://github.com/algofoogle/journal/blob/master/0229-2025-04-01.md#prior-work); [comments in the code](https://github.com/algofoogle/raybox-zero/blob/65ed244d9e3f8552ca4716e8722becba9e39bc66/game/CI2311/raybox_controller.py#L1-L18); and ["How it works"](https://github.com/algofoogle/raybox-zero/blob/main/game/doc/CI2311.md#how-it-works).
+It was primarily intended for use with the CI2311 version of raybox-zero, and for running MicroPython code on my external RP2040 board that would interface, via Caravel's UART, with [firmware](https://github.com/algofoogle/raybox-zero/blob/main/game/raybox_game/ci2311-firmware.c) on the Caravel RISC-V CPU (which would then bit-bang LA pins to do SPI transactions). For more info, see: [my recent notes](https://github.com/algofoogle/journal/blob/master/0229-2025-04-01.md#prior-work); [comments in the code](https://github.com/algofoogle/raybox-zero/blob/65ed244d9e3f8552ca4716e8722becba9e39bc66/game/CI2311/raybox_controller.py#L1-L18); and ["How it works"](https://github.com/algofoogle/raybox-zero/blob/main/game/doc/CI2311.md#how-it-works).
 
 The CI2311 code [is hardcoded to use](https://github.com/algofoogle/raybox-zero/blob/65ed244d9e3f8552ca4716e8722becba9e39bc66/game/CI2311/raybox_game.py#L76) the [CI2311 controller interface](https://github.com/algofoogle/raybox-zero/blob/65ed244d9e3f8552ca4716e8722becba9e39bc66/game/CI2311/raybox_controller.py#L231) (which [loads and runs the CI2311 "peripheral" on the external RP2040](https://github.com/algofoogle/raybox-zero/blob/65ed244d9e3f8552ca4716e8722becba9e39bc66/game/CI2311/raybox_controller.py#L234-L240)).
 
@@ -50,8 +50,8 @@ However, this code is also designed to [support the TT04 version](https://github
 > When reworking this code, it would be a good idea to detect the TT RP2040 firmware version and configure things accordingly -- mostly just for better support of the TT04 version.
 
 Here's what I plan to do:
-*   Keep the code in [`game/CI2311/`](https://github.com/algofoogle/raybox-zero/tree/main/game/CI2311) but maybe rename/move it later, or provide a README that explains if it has been moved to a generic location.
-*   Rename [`raybox_peripheral.py`](https://github.com/algofoogle/raybox-zero/blob/main/game/CI2311/raybox_peripheral.py) to include `_tt` and modify to support both TT04 and TT07 -- probably most code needed can come from [`tt07-raybox-zero-example.py`](https://github.com/algofoogle/raybox-zero/blob/main/game/tt07-raybox-zero-example.py)
-*   Update references to TT04.
-*   Try to support both TT SDK 1.x and 2.x.
-*   Add support for all the additional raybox-zero registers.
+- [x] Keep the code in [`game/CI2311/`](https://github.com/algofoogle/raybox-zero/tree/main/game/CI2311) but maybe rename/move it later, or provide a README that explains if it has been moved to a generic location (**Edit**: location is now [`game/raybox_game/`](https://github.com/algofoogle/raybox-zero/tree/main/game/raybox_game))
+- [x] Rename [`raybox_peripheral.py`](https://github.com/algofoogle/raybox-zero/blob/main/game/CI2311/raybox_peripheral.py) to include `_tt` and modify to support both TT04 and TT07 -- probably most code needed can come from [`tt07-raybox-zero-example.py`](https://github.com/algofoogle/raybox-zero/blob/main/game/tt07-raybox-zero-example.py)
+- [x] Update references to TT04.
+- [x] Try to support both TT SDK 1.x and 2.x.
+- [x] Add support for all the additional raybox-zero registers.
