0232: Tiny Tapeouts from June to September

--- a/0231-2025-04-11.md
+++ b/0231-2025-04-11.md
@@ -2,13 +2,12 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0230**-2025-04-09.md](./0230-2025-04-09.md) | *Next journal TBA* |
+| [**0230**-2025-04-09.md](./0230-2025-04-09.md) | [**0232**-2025-09-28.md](./0232-2025-09-28.md) |
+
+# TT06 auto demo; IHP "Antonalog" DAC & ring osc DAC + sim; TTCAD25a & RBZ update notes
 
 > [!NOTE]
 > This journal entry is less refined than my usual work. It has lots of different project updates in it that are unfinished, as a lot of stuff was going on.
-
-
-TT06 auto demo; IHP "Antonalog" DAC & ring osc DAC + sim; TTCAD25a & RBZ update notes
 
 
 # tt07-raybox-zero "game" demo
