--- a/0234-2025-11-11.md
+++ b/0234-2025-11-11.md
@@ -2,9 +2,11 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0233**-2025-09-28.md](./0233-2025-09-28.md) | *Next journal TBA* |
+| [**0233**-2025-09-28.md](./0233-2025-09-28.md) | [**0235**-2025-11-25.md](./0235-2025-11-25.md) |
 
 # ttsky25b-vga-matrix-dac (revisited)
+
+![ttsky25b icell layout in 2D and 3D](./i/0234-icell-q2.png)
 
 On the TTSKY25b shuttle I submitted a revision of my previous ttsky25**a**-vga-matrix-dac project (see [0233](./0233-2025-09-28.md)), and this is a quick note about that (written retrospectively).
 
